--- a/package.json
+++ b/package.json
@@ -35,8 +35,10 @@
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^2.9.0",
     "node-cache": "^5.1.2",
+    "openai": "^5.7.0",
     "puppeteer": "^24.3.0",
     "redis": "^4.7.0",
+    "sharp": "^0.34.2",
     "socket.io": "^4.8.1",
     "swagger-ui-express": "^5.0.1",
     "uuid": "^11.0.4"
